EKS Monitoring/k8s/deployment.yaml
---
# SImple Deployment file involves Youtube Clone App.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: youtube
  template:
    metadata:
      labels:
        app: youtube
    spec:
      containers:
      - name: youtube
        image: jadonharsh/youtube
        ports:
        - name: web
          containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 50m
          limits:
            memory: 256Mi
            cpu: 50m
